--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "@react-spring/three": "^10.0.1",
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
-    "@splinetool/r3f-spline": "^1.0.2",
-    "@splinetool/react-spline": "^4.1.0",
-    "@splinetool/runtime": "^0.9.526",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +40,7 @@
     "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.180.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
